# formbricks2grist-api

./: .env  .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
app/: lib.py  models.py  settings.py
formbricks/: client.py  handler.py  models.py  settings.py
grist/: client.py  handler.py  models.py  settings.py
notification/: client.py  handler.py  settings.py
